--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "path": "^0.12.7",
     "framer-motion": "^9.1.6",
+    "path": "^0.12.7",
     "react": "^18.2.0",
+    "react-card-slider-component": "^1.0.9",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1"
