Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,8 @@ stages:
 
 preview:
   stage: preview
+  tags:
+    - dalfcs_docker_autoscale
   script:
     - npm i
     - apk add --no-cache zip curl
