--- a/backend/package.json
+++ b/backend/package.json
@@ -20,12 +20,14 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
+    "mongoose": "^7.0.2",
     "morgan": "^1.10.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.3",
     "@types/uuid": "^9.0.1",
