--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-card-slider-component": "^1.0.9",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-paginate": "^8.1.4",
     "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
