--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "helmet": "^6.0.1",
     "mongoose": "^7.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.3",
+    "@types/nodemailer": "^6.4.7",
     "@types/uuid": "^9.0.1",
     "concurrently": "^7.6.0",
     "eslint": "^8.35.0",
